[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scripts/object_info.gd" type="Script" id=1]
[ext_resource path="res://assets/images/food-waste.jpg" type="Texture" id=2]
[ext_resource path="res://assets/fonts/main_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/main_font.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 4 )

[node name="object_info" type="Control"]
margin_top = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_top = 1.0
margin_right = 370.0
margin_bottom = 134.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel"]
margin_top = 2.0
margin_right = 365.0
margin_bottom = 130.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Panel"]
margin_left = 5.0
margin_top = 3.0
margin_right = 359.0
margin_bottom = 126.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_label" type="Label" parent="."]
margin_left = 140.0
margin_top = 13.0
margin_right = 252.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Food waste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description" type="Label" parent="."]
margin_left = 135.0
margin_top = 43.0
margin_right = 349.0
margin_bottom = 116.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "This is the description
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="object_sprite" type="Sprite" parent="."]
position = Vector2( 66.9074, 63.1289 )
scale = Vector2( 1.65826, 1.57114 )
texture = ExtResource( 2 )

[node name="bin_sprite" type="Sprite" parent="."]
position = Vector2( 338.295, 22.9621 )
scale = Vector2( 0.442255, 0.411243 )
texture = ExtResource( 2 )

[node name="bin_title" type="Label" parent="."]
margin_left = 291.239
margin_top = 12.7458
margin_right = 325.239
margin_bottom = 43.7458
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "BIN:"
__meta__ = {
"_edit_use_anchors_": false
}
